public/analytics-pro/v0.9.0rc2/_sources/reference/tmlt/analytics/index.rst.txt

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


*********************
tmlt.analytics
*********************

.. py:module:: tmlt.analytics

.. autoapi-nested-parse::

   `Tumult Labs' <https://tmlt.io>`_ differentially private analytics library.


Modules
=======

.. list-table::

   * - :mod:`.binning_spec`
     - A BinningSpec defines a binning operation on a column.
   * - :mod:`.constraints`
     - Defines :class:`~tmlt.analytics.constraints.Constraint` types.
   * - :mod:`.keyset`
     - A KeySet specifies a list of values for one or more columns.
   * - :mod:`.metrics`
     - Contains an interface and multiple implementations of utility metrics.
   * - :mod:`.non_private_session`
     - Interactive query evaluation using a differential privacy framework.
   * - :mod:`.privacy_budget`
     - Classes for specifying privacy budgets.
   * - :mod:`.program`
     - SessionProgram and SessionProgramBuilder interfaces.
   * - :mod:`.protected_change`
     - Types for programmatically specifying what changes in input tables are protected.
   * - :mod:`.query_builder`
     - An API for building differentially private queries from basic operations.
   * - :mod:`.query_expr`
     - Building blocks of the Tumult Analytics query language. Not for direct use.
   * - :mod:`.session`
     - Interactive query evaluation using a differential privacy framework.
   * - :mod:`.truncation_strategy`
     - Defines strategies for performing truncation in private joins.
   * - :mod:`.tuner`
     - Interface for tuning SessionPrograms.
   * - :mod:`.utils`
     - Utility functions.

.. toctree::
   :hidden:

   binning_spec/index.rst
   constraints/index.rst
   keyset/index.rst
   metrics/index.rst
   non_private_session/index.rst
   privacy_budget/index.rst
   program/index.rst
   protected_change/index.rst
   query_builder/index.rst
   query_expr/index.rst
   session/index.rst
   truncation_strategy/index.rst
   tuner/index.rst
   utils/index.rst






